# amodeus-api

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md  build.gradle.kts  config.example.yaml  docker-compose.prod.yaml  docker-compose.yaml  gradle.properties  openapi.yaml  pyproject.toml  settings.gradle.kts  setup.cfg
.github/workflows/: build-and-release.yaml  build.yaml
amodeus/: __main__.py  app.py  config.py  exceptions.py
amodeus/dependencies/: __init__.py  modeus.py  modeus_credentials.py
amodeus/models/: __init__.py  attendee.py  auth.py  base.py  building.py  error.py  lesson.py  location.py  person.py  subject.py  timetable_element.py
amodeus/parsers/: __init__.py  base.py  people.py  timetable.py
amodeus/routes/: auth.py  search.py  timetable.py
amodeus/upstream/: __init__.py  credentials.py  requests.py
amodeus/upstream/models/: __init__.py  base.py  building.py  course_unit_realization.py  cycle_realization.py  event.py  event_attendance.py  event_attendee.py  event_location.py  event_organizer.py  event_room.py  event_team.py  get_team_result.py  lesson_realization.py  lesson_realization_team.py  page.py  person.py  room.py  search_events_result.py  search_person_result.py
src/main/kotlin/me/evgfilim1/amodeus/api/: Application.kt
src/main/kotlin/me/evgfilim1/amodeus/api/mappers/: EventTeamMapper.kt  EventsMapper.kt  Mapper.kt  PeopleMapper.kt
src/main/kotlin/me/evgfilim1/amodeus/api/models/: APIError.kt  Auth.kt  Building.kt  Lesson.kt  Location.kt  Person.kt  (+2 more)
src/test/kotlin/me/evgfilim1/amodeus/: ApplicationTest.kt
(+37 files in other folders)
