[metadata]
name = amodeus
version = 0.1.0-alpha.2
description = Alternative MODEUS API
author = Evgeniy Filimonov (evgfilim1)
author_email = evgfilim1@yandex.ru
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3.9
keywords =
    amodeus-app

[options]
python_requires = >=3.9
packages = find:
install_requires =
    beautifulsoup4~=4.10.0
    fastapi~=0.68.1
    httpx[http2]~=0.19.0
    lxml~=4.6.3
    pyjwt~=2.1.0
    pydantic~=1.8.2
    python-multipart~=0.0.5
    pyyaml~=6.0.0

[options.extras_require]
server = uvicorn
dev =
    black~=21.9b0
    isort~=5.9.3
;    mypy~=0.910
;    types-beautifulsoup4~=4.9.4
;    types-pyyaml~=6.0.0
